sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:15: error: not found: value ecart
ecart = (ecart.toDouble / 1.3).toInt
^AlgCombSort:16: error: not found: value ecart
ecart=getNombreValeurs()
^AlgCombSort:23: error: not found: value ecart
		if(ecart>1)
                   ^AlgCombSort:25: error: not found: value ecart
		ecart=ecart/1.3
                ^AlgCombSort:27: error: not found: value ecart
			while(i+ecart<getNombreValeurs())
                                ^AlgCombSort:38: error: not found: value ecart
	}while(ecart>1 || inverse=true)
               ^